--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Kway: Github Pages + Code documentation made easy
+title: "Kway: Github Pages + Code documentation made easy"
 email: dqlobo@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -26,7 +26,7 @@ github_username:  dqlobo
 
 # Build settings
 markdown: kramdown
-theme: Minimal
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
