--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,13 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Kway: Github Pages + Code documentation made easy"
+title: "Kway"
 email: dqlobo@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/kway" # the subpath of your site, e.g. /blog
+description: Github Pages + Code documentation made easy
+baseurl: "" # "/kway" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  dqlobo
