--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,6 +20,7 @@ baseurl: "/kway" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  dqlobo
+show_downloads: true
 
 # Build settings
 markdown: kramdown
